[S3PP-24] Server side authentication

--- a/src/Spirebyte.Services.Identity.API/appsettings.Docker.json
+++ b/src/Spirebyte.Services.Identity.API/appsettings.Docker.json
@@ -8,11 +8,7 @@
     "url": "http://consul:8500",
     "service": "identity-service",
     "address": "identity-service",
-    "port": "80",
-    "pingEnabled": true,
-    "pingEndpoint": "ping",
-    "pingInterval": 3,
-    "removeAfterInterval": 3
+    "port": "80"
   },
   "fabio": {
     "enabled": true,
