--- a/src/Spirebyte.Services.Identity.API/Properties/launchSettings.json
+++ b/src/Spirebyte.Services.Identity.API/Properties/launchSettings.json
@@ -3,8 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:64698",
-      "sslPort": 0
+      "applicationUrl": "http://localhost:5004"
     }
   },
   "profiles": {
@@ -18,10 +17,10 @@
     "Spirebyte.Services.Identity.API": {
       "commandName": "Project",
       "launchBrowser": true,
+      "applicationUrl": "http://localhost:5004",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Local"
-      },
-      "applicationUrl": "https://localhost:44329;http://localhost:64698"
+      }
     },
     "Docker": {
       "commandName": "Docker",
