--- a/src/Spirebyte.Services.Identity.API/appsettings.json
+++ b/src/Spirebyte.Services.Identity.API/appsettings.json
@@ -8,12 +8,12 @@
     "enabled": true,
     "url": "http://localhost:8500",
     "service": "identity-service",
-    "address": "docker.for.win.localhost",
-    "port": "64698",
+    "address": "localhost",
+    "port": "5004",
     "pingEnabled": true,
     "pingEndpoint": "ping",
     "pingInterval": 3,
-    "removeAfterInterval": 3
+    "removeAfterInterval": 10
   },
   "fabio": {
     "enabled": true,
