--- a/src/Spirebyte.Services.Identity.Application/Spirebyte.Services.Identity.Application.csproj
+++ b/src/Spirebyte.Services.Identity.Application/Spirebyte.Services.Identity.Application.csproj
@@ -1,13 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Convey.CQRS.Commands" Version="0.4.349" />
-    <PackageReference Include="Convey.CQRS.Events" Version="0.4.349" />
-    <PackageReference Include="Convey.CQRS.Queries" Version="0.4.349" />
+    <PackageReference Include="Convey" Version="0.4.*" />
+    <PackageReference Include="Convey.CQRS.Commands" Version="0.4.*" />
+    <PackageReference Include="Convey.CQRS.Events" Version="0.4.*" />
+    <PackageReference Include="Convey.CQRS.Queries" Version="0.4.*" />
+    <PackageReference Include="Convey.MessageBrokers" Version="0.4.*" />
+    <PackageReference Include="Convey.WebApi" Version="0.4.349" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.3" />
   </ItemGroup>
 
   <ItemGroup>
