--- a/src/Spirebyte.Services.Identity.API/Spirebyte.Services.Identity.API.csproj
+++ b/src/Spirebyte.Services.Identity.API/Spirebyte.Services.Identity.API.csproj
@@ -9,10 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Convey" Version="0.4.*" />
-    <PackageReference Include="Convey.Logging" Version="0.4.*" />
-    <PackageReference Include="Convey.WebApi" Version="0.4.*" />
-    <PackageReference Include="Convey.WebApi.CQRS" Version="0.4.*" />
+    <PackageReference Include="Convey" Version="0.4.354" />
+    <PackageReference Include="Convey.Logging" Version="0.4.354" />
+    <PackageReference Include="Convey.WebApi" Version="0.4.354" />
+    <PackageReference Include="Convey.WebApi.CQRS" Version="0.4.354" />
   </ItemGroup>
 
   <ItemGroup>
