--- a/src/Spirebyte.Services.Identity.API/Spirebyte.Services.Identity.API.csproj
+++ b/src/Spirebyte.Services.Identity.API/Spirebyte.Services.Identity.API.csproj
@@ -3,9 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>eac4a875-6c45-4a5b-8cfe-80c130754c2c</UserSecretsId>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <DockerfileContext>..\..\..\..</DockerfileContext>
-    <DockerComposeProjectPath>..\..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
+    <RootNamespace>Spirebyte.Services.Identity.API</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
