Change database between test assemblies

--- a/src/Spirebyte.Services.Identity.API/appsettings.EndToEndTests.json
+++ b/src/Spirebyte.Services.Identity.API/appsettings.EndToEndTests.json
@@ -51,7 +51,7 @@
   },
   "mongo": {
     "connectionString": "mongodb://localhost:27017",
-    "database": "identity-test-db",
+    "database": "identity-endtoend-test-db",
     "seed": false
   },
   "outbox": {
