Gave mongo db a password

--- a/src/Spirebyte.Services.Identity.API/appsettings.IntegrationTests.json
+++ b/src/Spirebyte.Services.Identity.API/appsettings.IntegrationTests.json
@@ -50,7 +50,7 @@
     "excludePaths": [ "/", "/ping", "/metrics" ]
   },
   "mongo": {
-    "connectionString": "mongodb://localhost:27017",
+    "connectionString": "mongodb://root:4UeQAJgTqbCwjPCH@localhost:27017/?authSource=admin",
     "database": "identity-integration-test-db",
     "seed": false
   },
