--- a/src/Spirebyte.Services.Identity.API/appsettings.Docker.json
+++ b/src/Spirebyte.Services.Identity.API/appsettings.Docker.json
@@ -63,7 +63,7 @@
     "excludePaths": [ "/", "/ping", "/metrics" ]
   },
   "mongo": {
-    "connectionString": "mongodb://mongo:27017",
+    "connectionString": "mongodb://root:4UeQAJgTqbCwjPCH@mongo:27017/?authSource=admin",
     "database": "identity-service",
     "seed": false
   },
