--- a/src/Spirebyte.Services.Identity.API/appsettings.json
+++ b/src/Spirebyte.Services.Identity.API/appsettings.json
@@ -89,7 +89,7 @@
     "excludePaths": [ "/", "/ping", "/metrics" ]
   },
   "mongo": {
-    "connectionString": "mongodb://localhost:27017",
+    "connectionString": "mongodb://root:4UeQAJgTqbCwjPCH@localhost:27017/?authSource=admin",
     "database": "identity-service",
     "seed": false
   },
