Switched to new infrastructure

--- a/src/Spirebyte.Services.Identity.API/appsettings.Docker.json
+++ b/src/Spirebyte.Services.Identity.API/appsettings.Docker.json
@@ -5,15 +5,15 @@
   },
   "consul": {
     "enabled": true,
-    "url": "http://consul:8500",
-    "service": "identity-service",
-    "address": "identity-service",
+    "url": "http://spirebyte-consul:8500",
+    "service": "spirebyte-identity-service",
+    "address": "spirebyte-identity-service",
     "port": "80"
   },
   "fabio": {
     "enabled": true,
-    "url": "http://fabio:9999",
-    "service": "identity-service"
+    "url": "http://spirebyte-fabio:9999",
+    "service": "spirebyte-identity-service"
   },
   "httpClient": {
     "type": "fabio",
@@ -40,7 +40,7 @@
     },
     "elk": {
       "enabled": false,
-      "url": "http://elk:9200"
+      "url": "http://spirebyte-elk:9200"
     },
     "file": {
       "enabled": false,
@@ -49,32 +49,32 @@
     },
     "seq": {
       "enabled": true,
-      "url": "http://seq:5341",
+      "url": "http://spirebyte-seq:5341",
       "apiKey": "secret"
     }
   },
   "jaeger": {
     "enabled": true,
-    "serviceName": "identity",
-    "udpHost": "jaeger",
+    "serviceName": "spirebyte-identity",
+    "udpHost": "spirebyte-jaeger",
     "udpPort": 6831,
     "maxPacketSize": 0,
     "sampler": "const",
     "excludePaths": [ "/", "/ping", "/metrics" ]
   },
   "mongo": {
-    "connectionString": "mongodb://root:4UeQAJgTqbCwjPCH@mongo:27017/?authSource=admin",
-    "database": "identity-service",
+    "connectionString": "mongodb://root:4UeQAJgTqbCwjPCH@spirebyte-mongo:27017/?authSource=admin",
+    "database": "spirebyte-identity-service",
     "seed": false
   },
   "rabbitMq": {
     "hostnames": [
-      "rabbitmq"
+      "spirebyte-rabbitmq"
     ]
   },
   "redis": {
-    "connectionString": "redis",
-    "instance": "identity:"
+    "connectionString": "spirebyte-redis",
+    "instance": "spirebyte-identity:"
   },
   "swagger": {
     "enabled": true,
@@ -87,7 +87,7 @@
   },
   "vault": {
     "enabled": false,
-    "url": "http://vault:8200",
+    "url": "http://spirebyte-vault:8200",
     "kv": {
       "enabled": false
     },
