--- a/src/Spirebyte.Services.Identity.API/appsettings.json
+++ b/src/Spirebyte.Services.Identity.API/appsettings.json
@@ -28,7 +28,8 @@
       "enabled": true,
       "maskTemplate": "*****"
     },
-    "correlationIdHeader": "x-correlation-id"
+    "correlationIdHeader": "x-correlation-id",
+    "correlationContextHeader": "x-correlation-context"
   },
   "jwt": {
     "certificate": {
