Switched to dynamic gateway

--- a/src/Spirebyte.Services.Identity.API/appsettings.Docker.json
+++ b/src/Spirebyte.Services.Identity.API/appsettings.Docker.json
@@ -6,14 +6,14 @@
   "consul": {
     "enabled": true,
     "url": "http://spirebyte-consul:8500",
-    "service": "spirebyte-identity-service",
+    "service": "identity-service",
     "address": "spirebyte-identity-service",
     "port": "80"
   },
   "fabio": {
     "enabled": true,
     "url": "http://spirebyte-fabio:9999",
-    "service": "spirebyte-identity-service"
+    "service": "identity-service"
   },
   "httpClient": {
     "type": "fabio",
@@ -91,6 +91,12 @@
     "version": "v1",
     "routePrefix": "docs",
     "includeSecurity": true
+  },
+  "metrics": {
+    "tags": {
+      "env": "production",
+      "server": "vps"
+    }
   },
   "vault": {
     "enabled": false,
