--- a/src/Spirebyte.Services.Identity.API/appsettings.EndToEndTests.json
+++ b/src/Spirebyte.Services.Identity.API/appsettings.EndToEndTests.json
@@ -117,6 +117,12 @@
     "routePrefix": "docs",
     "includeSecurity": true
   },
+  "metrics": {
+    "tags": {
+      "env": "development",
+      "server": "github"
+    }
+  },
   "vault": {
     "enabled": false,
     "kv": {
