--- a/src/Spirebyte.Services.Identity.API/appsettings.Docker.json
+++ b/src/Spirebyte.Services.Identity.API/appsettings.Docker.json
@@ -7,7 +7,7 @@
     "enabled": true,
     "url": "http://spirebyte-consul:8500",
     "service": "identity-service",
-    "address": "spirebyte-identity-service",
+    "address": "[hostname]",
     "port": "80"
   },
   "fabio": {
