--- a/src/Spirebyte.Services.Identity.Core/Spirebyte.Services.Identity.Core.csproj
+++ b/src/Spirebyte.Services.Identity.Core/Spirebyte.Services.Identity.Core.csproj
@@ -5,4 +5,8 @@
         <LangVersion>latestmajor</LangVersion>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AspNetCore.Identity.MongoDbCore" Version="3.1.2" />
+    </ItemGroup>
+
 </Project>
