--- a/src/Spirebyte.Services.Identity.Application/Spirebyte.Services.Identity.Application.csproj
+++ b/src/Spirebyte.Services.Identity.Application/Spirebyte.Services.Identity.Application.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
         <PackageReference Include="Convey" Version="1.0.531" />
+        <PackageReference Include="Convey.Auth" Version="1.0.531" />
         <PackageReference Include="Convey.CQRS.Commands" Version="1.0.531" />
         <PackageReference Include="Convey.CQRS.Events" Version="1.0.531" />
         <PackageReference Include="Convey.CQRS.Queries" Version="1.0.531" />
@@ -14,7 +15,7 @@
         <PackageReference Include="Convey.WebApi" Version="1.0.531" />
         <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
         <PackageReference Include="Partytitan.Convey.Minio" Version="1.0.12" />
-        <PackageReference Include="Spirebyte.Shared" Version="1.0.5" />
+        <PackageReference Include="Spirebyte.Shared" Version="1.0.8" />
     </ItemGroup>
 
     <ItemGroup>
