Fix identity service jwt

--- a/src/Spirebyte.Services.Identity.API/appsettings.json
+++ b/src/Spirebyte.Services.Identity.API/appsettings.json
@@ -36,14 +36,12 @@
     "correlationContextHeader": "x-correlation-context"
   },
   "jwt": {
-    "certificate": {
-      "location": "Certs/spirebyte.cer"
-    },
     "authority": "https://sts.spirebyte.nl",
     "validIssuer": "https://sts.spirebyte.nl",
     "validateAudience": false,
     "validateIssuer": true,
-    "validateLifetime": true
+    "validateLifetime": true,
+    "nameClaimType": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/nameidentifier",
   },
   "logger": {
     "level": "information",
